# travel-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE.md  README.md  agent.py  app.py  data.dvc  dense.py  docker-compose.ollama.yml  docker-compose.yml  dvc.yaml  index.html  mkdocs.yml  params.yaml  prompts.py  prompts.yaml  pyproject.toml  qdrant.py  requirements.txt  rubrics.py  sparse.py  temp.txt  tool.py  travelscheme.excalidraw  ui.py
.dvc/: config
.github/: dependabot.yml
.github/workflows/: docker.yml  docs.yml  huggingface.yml  ruff.yml
data/: .gitignore  embedding.dvc  embedding_bench.dvc  geo-reviews-dataset-2023.csv  merged_mosru.csv  raw.dvc
deploy/: Caddyfile
deploy/html/: error.html
deploy/kubernetes/: caddy-deployment.yaml  configmap-caddyfile.yaml  configmap-travel-agent.yaml  phoenix-deployment.yaml  pvc-qdrant.yaml  qdrant-deployment.yaml  secret-travel-agent.yaml  travel-agent-deployment.yaml
docs/: docs.md  embedding.md  index.html  index.md  links.md  rag.md  travelscheme.excalidraw
links/: index.html
notebooks/: draft.ipynb  eda.ipynb  embedding_bench_draft.ipynb  langchain.ipynb  preprocess_data.ipynb  questions.ipynb  rag.ipynb  rag_evaluation.ipynb  ragas.ipynb  smolagents.ipynb  temp.ipynb
notebooks/frameworks/: smolagents.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/sankt-peterburg/: config.json
qdrant_storage/collections/sankt-peterburg/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/sankt-peterburg/0/segments/17020d79-e254-4768-a589-f97e49589b99/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/sankt-peterburg/0/segments/3cef4697-148e-49ea-adf9-9ec9c75bbc51/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007  segment.json
qdrant_storage/collections/sankt-peterburg/0/segments/5580d602-e53e-470b-8126-1314bda467fe/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/sankt-peterburg/0/segments/60173890-1e50-46c7-9857-1f0f14a17318/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/sankt-peterburg/0/segments/6195bde6-4ca5-4710-86a1-5e2b170f0a52/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/sankt-peterburg/0/segments/839ce321-ca94-46fe-9beb-8ac32003c848/: IDENTITY  LOG  MANIFEST-000005
rag/: index.html
scripts/python-qdrant-upload/: main.py
scripts/rust-qdrant-upload/: .env.example  Cargo.toml  README.md
scripts/rust-qdrant-upload/src/: main.rs
search/: search_index.json
travel_agent/: app.py  utils.py
travel_agent/data/: cultural.py  theatres.py
travel_agent/pipeline/: .gitignore  analyze.py  embed.py  generate_embed_questions.py  generate_questions.py  generate_rag_questions.py  generate_rag_questions.py.dvc  prepare.py
travel_agent/qdrant/: __init__.py  client.py  mosru_places.py  qdrant.py  reviews_searcher.py  yandex_reviews.py
travel_agent/rag/: search.py
travel_agent/retrieval/: reviews.py
travel_agent/retrieval/bench/: embedding.py
travel_agent/retrieval/embedding/: embedding_bench.py  embedding_generation.py  qdrant_local.py  utils.py
travel_agent/retrieval/embedding/bench/: bm25_bench.py  embedding_bench.py  embedding_bench_qdrant.py  qdrant.py  run_bench.py  tf_idf.py  to-do.md  utils.py
travel_agent/retrieval/embedding/generation/: bm25.py  dense.py  late_interaction.py  preprocess.py  qdrant.py  sparse.py  st.py  upload_full_dataset.py
travel_agent/retrieval/embedding/old/: bm25_bench.py  embedding_bench.py  embedding_bench_qdrant.py  old_code.py  old_qdrant_benchmark_code.py  old_qdrant_benchmark_code_2.py
travel_agent/retrieval/embedding/old/search/: single.py
travel_agent/retrieval/embedding/search/: hybrid.py  search.py
travel_agent/retrieval/langchain/: prompt.py  tool.py
travel_agent/retrieval/smolagents/: prompts.py  tool.py  toolcalling_agent.yaml
travel_agent/smolagents/: agent.py  prompts.py  tool.py  toolcalling_agent.yaml
travel_agent/tools/qload/: main.py
travel_agent/tracing/: __init__.py  tracing.py
travel_agent/ui/: gradio.py
(+31 files in other folders)
