[project]
name = "travel-agent"
version = "0.1.0"
description = "LLM agent with retrieval"
readme = "README.md"
authors = [
    { name = "Тот самый белый", email = "kirazu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "huggingface-hub[hf-xet]>=0.30.2",
    "loguru>=0.7.3",
    "openinference-instrumentation-smolagents>=0.1.11",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.2",
    "smolagents[gradio,litellm,telemetry]>=1.15.0",
    "torch>=2.6.0",
    "transformers>=4.51.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0"
]
