[project]
name = "travel-agent"
version = "0.1.0"
description = "LLM agent with retrieval"
readme = "README.md"
authors = [
    { name = "Тот самый белый", email = "kirazu@gmail.com" }
]
requires-python = ">=3.13"


dependencies = [
    "arize-phoenix>=9.5.0",
    "duckduckgo-search>=8.0.1",
    "huggingface-hub[hf-xet]>=0.30.2",
    "fastembed>=0.6.1",
    "loguru>=0.7.3",
    "markdownify>=1.1.0",
    "openinference-instrumentation-smolagents>=0.1.11",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.13.3",
    "requests>=2.32.3",
    "sentence-transformers>=4.0.2",
    "smolagents[gradio,litellm,telemetry]>=1.15.0",
    "torch>=2.7.0",
    "transformers>=4.51.2",
]

[project.optional-dependencies]
gpu = [
    "fastembed-gpu>=0.6.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]
notebooks = [
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pymystem3>=0.2.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transliterate>=1.10.2",
    "umap-learn>=0.5.7",
    "vertexai>=1.71.1",
    "wordcloud>=1.9.4",
    "tabulate>=0.9.0",
]
docs = [
    "mkdocs-material>=9.6.11",
]
langchain = [
    "langchain-ollama>=0.3.2",
    "langchain-qdrant>=0.2.0",
    "langchain>=0.3.24",
]

[project.scripts]
app = "travel_agent:app.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
float_to_top = true
known_third_party = ["wandb"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
