[package]
name = "rust-qdrant-upload"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arrow = "55.0.0"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.11.8"
json = "0.12"
log = "0.4"
parquet = "55.0.0"
qdrant-client = "1.7"
tokio = { version = "1.32", features = ["full"] }
